<resources>
    <string name="app_name">Weather report</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_list">City list</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search city</string>
    <string name="header_3h_forecast">3 hour forecast</string>
    <string name="header_daily_forecast">Daily forecast</string>

    <string name="key_pref_temperature">pref_temperature</string>
    <string name="key_pref_pressure">pref_pressure</string>
    <string name="key_pref_speed">pref_speed</string>
    <string name="key_pref_time">pref_time</string>
    <string name="pref_temperature_fahrenheit">FAHRENHEIT</string>
    <string name="pref_pressure_hpa">H_PA</string>
    <string name="pref_speed_m_sec">M_SEC</string>
    <string name="pref_time_12_h">CLOCK_12_H</string>
    <string name="pref_title_units">Units</string>
    <string name="pref_title_temperature">Temperature</string>
    <string name="pref_title_pressure">Pressure</string>
    <string name="pref_title_speed">Speed</string>
    <string name="pref_title_time">Time</string>
    <string name="activity_settings_label">Settings</string>
    <string name="menu_item_delete">Delete</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="details_header">Current weather details</string>
    <string name="add_city_message">Please add city</string>
    <string name="copy_db_error">Error copying city database</string>
    <string name="weather_loading_error">Wather data cannot be loaded</string>
    <string name="data_not_available">Data not available</string>
    <string name="missing_internet">Internet connection is missing</string>
</resources>
