<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search_hint"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView"
        app:queryBackground="@color/transparent"/>
</menu>